--- a/www/index.html
+++ b/www/index.html
@@ -104,7 +104,7 @@
                     is spreading throughout continental US.
                 </h1>
 				
-				<h3>Build with R, data retrieved <br> 
+				<h3>Built with R, data retrieved <br> 
 				daily from Johns Hopkins University repo, <br>
 				and HTML templates from Glint/Vivek Katial</h3>
                 
